# jntajis-rs

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
examples/: mj_shrink_example.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_encode.rs  fuzz_mj_shrink.rs  fuzz_roundtrip.rs  fuzz_translit.rs
src/: lib.rs
src/array_vec/: invalid_value.rs  mod.rs
src/codec/: array_vec.rs  common_models.rs  conversion_mode.rs  decoder.rs  encoder.rs  error.rs  generated.rs  inmemory_models.rs  inplace_ptr_vec.rs  invalid_value.rs  inwire_models.rs  jis.rs  mj_shrink.rs  mod.rs  translit.rs
src/codegen/: main.rs
