[package]
name = "jntajis-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.jntajis]
path = ".."

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encode"
path = "fuzz_targets/fuzz_encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_translit"
path = "fuzz_targets/fuzz_translit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mj_shrink"
path = "fuzz_targets/fuzz_mj_shrink.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false
